fix error not show chart on mobile

--- a/src/components/chartBox/chartBox.scss
+++ b/src/components/chartBox/chartBox.scss
@@ -15,13 +15,17 @@
         justify-content: space-between;
 
         @include sm {
-            gap: 20px;
+            gap: 10px;
         }
 
         .title {
             display    : flex;
             align-items: center;
             gap        : 10px;
+
+            // @include sm {
+            //     gap: 5px;
+            // }
 
             @include xxl {
                 font-size: 14px;
@@ -31,6 +35,11 @@
         h1 {
             @include xxl {
                 font-size: 20px;
+            }
+
+            @include sm {
+                font-size   : 16px;
+                margin-right: 10px;
             }
         }
     }
@@ -44,6 +53,10 @@
         .chart {
             width : 100%;
             height: 100%;
+
+            @include sm {
+                height: 150px;
+            }
         }
 
         .texts {
