--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -22,11 +22,17 @@
         grid-template-columns: repeat(1, 1fr);
     }
 
-    @include sm {
-        grid-auto-rows       : minmax(120px, auto);
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    // @include sm {
+    //     grid-template-columns: repeat(1, auto);
+    //     grid-auto-rows       : auto;
+    // }
 
-    }
+    // @include sm {
+    //     grid-auto-rows             : minmax(120px, auto);
+    //     grid-template-columns      : repeat(auto-fit, minmax(200px, 1fr));
+    //     // grid-template-columns   : repeat(1, minmax(200px, 1fr));
+
+    // }
 
 
 
@@ -36,19 +42,25 @@
         border-radius: 10px;
         border       : 2px solid $soft-bg;
 
-        // @include sm {
-        //     :nth-child(4) {
-        //         grid-row: 1;
-        //     }
-        // }
+    }
 
-
+    .box2,
+    .box3,
+    .box5,
+    .box6 {
+        @include sm {
+            min-height: 300px;
+        }
     }
 
     .box1 {
         grid-column: span 1;
         grid-row   : span 3;
 
+        // @include sm {
+        //     // grid-row: 8/9;
+        //     max-height: 500px;
+        // }
 
     }
 
